# Janak_Mandavgade-golang-learning

./: excercise-equivalent-binary-trees.go  excercise-errors.go  excercise-images.go  excercise-reader.go  excercise-rot-reader.go  excercise-spinger.go  hello.go  list.go
cpp_excercise/excercise_1/: CMakeLists.txt  test_main.cpp
cpp_excercise/excercise_1/3multiples/: test_threemultiples.cpp  threemultiples.cpp  threemultiples.h
cpp_excercise/excercise_1/5multiples/: fivemultiples.cpp  fivemultiples.h  test_fivemultiples.cpp
cpp_excercise/excercise_1/even/: even.cpp  even.h  test_even.cpp
cpp_excercise/excercise_1/odd/: odd.cpp  odd.h  test_odd.cpp
cpp_excercise/excercise_1/prime/: prime.cpp  prime.h  test_prime.cpp
cpp_excercise/excercise_2/: main_test.cpp  student.cpp  student.h
excercise/odd/: odd.go  odd_test.go
